Server receives messages in setup stages of the game
Server parses input sent by the user applying controls to verify that the input is well formed in these stages: color selection, gods selection by the challenger, god selection by the player, start player selection by the challenger, worker positioning on the game map, disconnection message in all cases
Implemented also the serializable classes to notify to clients all information about the game